# conlaw

./: Cargo.toml  LICENSE  README.md  vis.py
benches/: faer_benches.rs
examples/: advection_periodic.rs  advection_periodic_scalar.rs  basic.rs  linear.rs  non_linear.rs  nonlinear.rs
src/: bc.rs  driver.rs  faer_add.rs  grid.rs  lib.rs  linear.rs  main.rs.bak  mesh.rs  method.rs  non_linear.rs  problem.rs  sim.rs
src/methods/: mod.rs
